fix scroll and layout shifts (introduces minor style regression in topbar)

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -2,6 +2,10 @@
 
 // TODO add css reset
 
+html {
+  overflow-y: scroll;
+}
+
 html,body {
   height: 100%;
   margin: 0;
@@ -10,7 +14,6 @@ html,body {
   -moz-osx-font-smoothing: grayscale;
   background: var(--bg);
   color: var(--fg);
-  overflow-y: scroll;
 }
 #root {
   height: 100%;
